# kodelife-generator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: KODELIFE_EXAMPLES.md  KODELIFE_FILE_FORMAT.md  README.md  TEST_SUMMARY.md
docs/ISF/: REFERENCES.md
docs/kodelife/: getting-started.md  interface-editor.md  interface-menubar.md  interface-output.md  interface.md  internal-display.md  kontrolpanel-pass.md  kontrolpanel-project.md  kontrolpanel-shaderstage.md  kontrolpanel.md  parameters-built-in.md  parameters-constant.md  parameters.md  preferences-audio.md  preferences-editor.md  preferences-general.md  preferences-output.md  preferences-shader.md
examples/: INDEX.md  README.md  README_METAL_EXAMPLE.md  XsyGzz.json  animated_rainbow.py  file_watch_demo.py  metal_gradient.py  metal_plasma_tunnel_mouse.py  metal_shader_example.py  minimal_test.py  plasma.fs  plasma_embedded_test.py  red.fs  shadertoy_compatible.py  shadertoy_converter.py  simple_gradient.py  test_file_watch.py
examples/templates/: README.md  shadertoy-template-gles.glsl  shadertoy-template.glsl
extras/: EXTRACTION_SUMMARY.md  FINDINGS_kodelife_examples_analysis.md  README.md
scripts/: format.sh
src/klproj/: __init__.py  cli.py  generator.py  helpers.py  isf_converter.py  isf_parser.py  metal_helpers.py  types.py
src/klproj/utils/: __init__.py  analysis.py  batch_processor.py  isf_discovery.py  reporter.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_generator.py  test_helpers.py  test_integration.py  test_isf.py  test_metal_helpers.py  test_types.py
tools/: README.md  __init__.py  analyze_batch.py  batch_convert.py  find_shaders.py
tutorials/: 01_porting_glsl_fragment_shader.md  02_porting_metal_shader.md  README.md
